--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "predis/predis": "~1.1@dev",
+        "php-amqplib/php-amqblib":"2.6.*",
+        "garveen/laravoole": "^0.5.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
